--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,3 +1,5 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import '@fortawesome/fontawesome-free/css/all.min.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
