--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,4 +1,7 @@
-@import '@fortawesome/fontawesome-free/css/all.min.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img {
+    user-select: none;
+}
